--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 # This is a folder of all the projects I'm working on as I learn to create websites and become a full-stack 
-developer. Feel free to explore these files!
+developer. Feel free to explore these files.
+
+<!-- This is a comment -->
