Added image files and updated html to show images, also updated README.md

--- a/1. Band Website/README
+++ b/1. Band Website/README
@@ -12,3 +12,6 @@
     # Use button role even on simple buttons.
     # Only use the header element when making a page title, section title, or article title. Do not use it for album title etc. Remember that it has semantic meaning. Use a div instead.
     # If stuff is inline, use a span rather than a div unless it contains many pther elements.
+    # Always add an alt tag to images when I put them on the website. This allows them to show up even before I add the source.
+    # Always change the file extension of webmp to png.
+    # It's okay to style images with width and height in HTML before using CSS.
